bug fix: fixed misaligned text-layer in zoomed windows

--- a/pdf_viewer/resources/styles.css
+++ b/pdf_viewer/resources/styles.css
@@ -40,6 +40,7 @@ header > * {
 #page {
   margin-bottom: 0.5em;
   border: 1px solid var( --border );
+  position: relative;
 }
 
 #page > * {
